# coalition_llm

./: .gitignore  CITATION.cff  Makefile  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
configs/data/: coalition_qa.yaml
configs/experiment/: ablation.yaml  main.yaml  reproduce_table3.yaml
configs/protocol/: coalt.yaml  self_consistency.yaml  standard.yaml  vanilla_cot.yaml
scripts/: download_data.sh  reproduce_all.sh
src/: __init__.py
src/agents/: __init__.py  llm_agent.py
src/coalition_llm/game_theory/: value_functions.py
src/coalition_llm/prompts/: coalt_protocol.py
src/coalition_llm/utils/: __init__.py  reproducibility.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  metrics.py
src/game_theory/: __init__.py  coalition_game.py  stability.py
src/prompts/: __init__.py  baseline_protocols.py
tests/: conftest.py  test_data.py  test_model.py  test_reproducibility.py
